# mesa

./: .gitattributes  meson.build  meson_options.txt
debian/: changelog  control  control.in  libegl-mesa0.symbols  libegl-pvr0-ddk119.install  libgbm1-pvr-ddk119.install  libgbm1.symbols  libgl1-pvr-dri-ddk242.install  libglapi-pvr-ddk119.install  libglx-mesa0.symbols  pvr-vulkan-drivers-ddk242.install  rules
debian/patches/: 0001-Revert-meson-do-not-pull-in-clc-for-clover.patch  0001-add-zx-s-driver-to-mesa-s-driver-map-list-and-export.patch  0001-fix-meson.build-more-Gallium-Vulkan-drivers-for-on-a.patch  0001-loader-dri3-Clean-up-dri3_find_back-logic.patch  0001-support-riscv.patch  0002-add-loongarch-orcjit.patch  0002-add-zx-s-driver-to-mesa-s-driver-map-list-and-export.patch  0002-llvmpipe-make-unnamed-global-have-internal-linkage.patch  0002-loader-dri3-Find-idle-buffer-with-minimum-buffer-age.patch  0003-llvmpipe-add-an-implementation-with-llvm-orcjit.patch  0003-loader-dri3-Simplify-new-buffer-allocation-in-dri3_f.patch  0003-orcjit-shader-cache.patch  0004-egl-wayland-Prefer-back-buffer-with-minimum-buffer-a.patch  0004-llvmpipe-add-LoongArch-support-in-ORCJIT.patch  0005-llvmpipe-append-partial-mask-to-partial-fs_variant-f.patch  0005-loader-dri3-Move-NULL-handling-into-dri3_free_render.patch  0006-llvmpipe-add-shader-cache-support-for-ORCJIT-impleme.patch  0006-loader-dri3-Add-dri3_set_render_buffer-helper.patch  0007-fix-iris_bufmgr.c-set-PAGE_SIZE-as-16384-for-LoongAr.patch  0007-loader-dri3-Overhaul-draw-cur_num_back-handling.patch  0026-add-zx-s-driver-to-mesa-s-driver-map-list-and-export.patch  1001-zink-do-not-use-demote-on-IMG-blobs.patch  2001-update-to-mesa-24.0.9.patch  9001-add-dri-alias.patch  Revert-hasvk-elk-stop-turning-load_push_constants-in.patch  etnaviv-add-support-for-texelfetch.patch  kopper-Revert-kopper-Explicitly-choose-zink.patch  orcjit-loong64.patch  orcjit.patch  series
debian/patches/glvnd/: 1004-gbm-backend-ize.patch
debian/patches/imggpu/: 0001-zink-emit-consts-as-uint-only-on-IMG-proprietary-dri.patch  0002-zink-use-lazy-descriptors-for-IMG-proprietary-driver.patch  0003-zink-Do-not-use-demote-on-IMG-blobs.patch  0004-zink-don-t-assert-geometryShader-for-IMG-proprietary.patch  0005-zink-reject-IMG-blob-24.1-6554834-unless-enforced.patch  0006-Revert-zink-reject-Imagination-proprietary-driver-w-.patch  0007-zink-workaround-vkQueueSubmit-issue-in-old-PowerVR-b.patch  0008-zink-lower-the-rejection-line-of-IMG-blobs-to-1.19-6.patch
debian/patches/pvr/: 0001-Add-PVR-Gallium-driver.patch  0002-dri-Add-some-new-DRI-formats-and-fourccs.patch  0003-GL_EXT_sparse_texture-entry-points.patch  0004-Add-support-for-various-GLES-extensions.patch  0005-Add-EGL_IMG_cl_image-extension.patch  0006-egl-optimise-eglMakeCurrent-for-the-case-where-nothi.patch  0007-GL_EXT_shader_pixel_local_storage2-entry-points.patch  0008-GL_IMG_framebuffer_downsample-entry-points.patch  0009-GL_OVR_multiview-entry-points.patch  0010-Add-OVR_multiview_multisampled_render_to_texture.patch  0011-wayland-drm-install-wayland-drm.xml-to-the-configure.patch  0012-Enable-buffer-sharing-in-the-kms_swrast-driver.patch  0013-egl-wayland-add-support-for-RGB565-back-buffers.patch  0014-egl-automatically-call-eglReleaseThread-on-thread-te.patch  0015-egl-add-Tizen-platform-support.patch  0016-egl-add-support-for-EGL_TIZEN_image_native_surface.patch  0017-egl-wayland-post-maximum-damage-when-blitting.patch  0018-egl-wayland-flush-the-drawable-before-blitting.patch  0019-egl-tizen-create-an-internal-_EGLImage-for-each-tbm-.patch  0020-dri-use-a-supported-API-in-driCreateNewContext.patch  0021-gbm-add-gbm_bo_blit.patch  0022-gbm-don-t-assert-if-DRI-context-creation-fails.patch  0023-egl-wayland-add-pbuffer-support.patch  0024-dri-add-support-for-YUV-DRI-config.patch  0025-egl-eglBindAPI-workaround-for-dEQP-bug.patch  (+43 more)
docs/: release-calendar.csv
include/drm-uapi/: drm_fourcc.h
src/: meson.build
src/egl/: meson.build
src/gallium/: meson.build
src/gallium/frontends/sgx/: meson.build  sgx_compat.c  sgx_context.c  sgx_drawable.c  sgx_dri.c  sgx_dri.h  sgx_ext.c  sgx_mesa.h  sgx_object_cache.c  sgx_object_cache.h  sgx_pixfmts.h  sgx_queue.h  sgx_support.h  sgx_util.c
src/gbm/: meson.build
src/glx/: dri3_glx.c  dri3_priv.h  meson.build
src/loader/: loader.c  loader_dri3_helper.c  loader_dri3_helper.h
src/pvr/wsi/: meson.build  pvr_mesa_wsi_interface.h  pvr_wsi.c  pvr_wsi.h  pvr_wsi_display.c  pvr_wsi_extensions.c  pvr_wsi_headless.c  pvr_wsi_wayland.c
(+112 files in other folders)
